Auth user and user friends api docs
